# picogpt_rs

./: .gitignore  Cargo.toml  download.py  readme.md  test.ipynb
src/: main.rs  nn.rs  utils.rs
