[package]
name = "picogpt_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif="0.17.8"
reqwest = "0.12.4"
anyhow = "1.0.82"
tokio = { version = "1.37.0", features = ["full"] }
ndarray = "0.15.6"
num-traits = "0.2.18"
approx = "0.5.1"